# automation_framework

./: README.md  pyproject.toml  requirements.txt  walkthrough.md
configuration/: config.py  local_parameters.py
utils/: browser_handler.py
