[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation_framework"
version = "0.1.0"
description = "Playwright-based automation framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Karl Duggan" }]
dependencies = [
  "playwright>=1.47",
  "pytest>=8",
  "pytest-playwright>=0.5.0",
  # Add anything else you use:
  # "pydantic>=2",
  # "python-dotenv>=1",
  # "typer>=0.12",
]

# CLI entry points (optional but handy).
# Create a main() in automation_framework/utils/browser_handler.py to use this.
[project.scripts]
af-run = "automation_framework.utils.browser_handler:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-playwright>=0.5.0",
]

[tool.setuptools.packages.find]
# Ensure your package is discovered
include = ["automation_framework*"]

# ---- Optional tooling config (nice defaults) ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
